# whatis

./: README.md  pyproject.toml  whatis.py
src/: whatis.py
tests/: test_examples.py
