[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "whatis"
version = "0.0.1"
authors = [
  { name="Zak Buzzard", email="zakbuzzard1@gmail.com" },
]
description = "A small Python utility to tell you what an object is"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zzbuzzard/whatis"
Issues = "https://github.com/zzbuzzard/whatis/issues"

